# merit-ml

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.merit.yml
merit-ui-v2/: .vercelignore  FREEZE_NOTES.md  README.md  V2_CHANGELOG.md  pyproject.toml
merit-ui-v2/api/: index.py
merit-ui-v2/merit/: assessment.py  cli.py  feature_names.py  metaboscore.py  models.py  mw_archive.py  mw_full_run.py  readiness_score.py  remediation.py  remote.py  reporting.py  serialization.py  source_sample_count_notes.json  ui.py  utils.py  workflow.py
merit-ui-v2/merit/connectors/: __init__.py  base.py  workbench.py
merit-ui-v2/merit/manuscript/: MERIT_scoring_methods.md  QC-filter-for-sample-names.md  feature-extraction-design-decisions.md  generate_readinessscore_distribution.py  manuscript.md  misc.txt  mw-data-fetch-and-process.md  mwtab-tabular-data-analysis.md  no-source-studies-147.txt  scoring-design-decisions.md  verify_mw_sources_api.py
merit-ui-v2/merit/manuscript/archive/: data-ingestion-details-ml-mw.md  data-ingestion-workflow-ml-mw.md  prompt.md
merit-ui-v2/merit/manuscript/figures/Figure-2/: generate_figure2b_upset.py
merit-ui-v2/merit/manuscript/figures/Figure-4/: collect_feature_type_counts.py  collect_intensity_scale.py  (+5 more)
merit-ui-v2/merit/manuscript/supplementary/: supplementary_note_source_aware_missingness.md
merit-ui-v2/merit/metrics/: __init__.py  analytical.py  annotation.py  base.py  cohort.py  harmonization.py  metadata.py  ml_readiness.py  separability.py  structural.py
merit-ui-v2/scripts/: build_citation_index.py
(+43 files in other folders)
