[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merit"
version = "0.1.0"
description = "MachinE learning ReadIness for Tabular metabolomics data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Codex"}
]
dependencies = [
  "flask>=3.0",
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2"
]

[project.scripts]
merit = "merit.cli:main"

[tool.setuptools]
packages = ["merit", "merit.connectors", "merit.metrics"]
